--- a/style.css
+++ b/style.css
@@ -85,10 +85,12 @@ form {
 	display: flex;
 	flex-flow: column;
 	gap: 1em;
+	padding-bottom: 2em;
 }
 
 label {
 	font-family: sans;
+	font-size: 0.9em;
 	color: #3A3A3A;
 }
 input {
@@ -119,6 +121,8 @@ input:focus:valid {
 .error::after {
 	content: "*Passwords do not match";
 	color:red;
+	font-size: 0.8em;
+	font-family: sans;
 	
 }
 
@@ -126,7 +130,7 @@ button {
 	margin-left: 1em;
 	margin-top: 1em;
 	border-radius: 10px;
-	padding: 0.5em 2.5em;
+	padding: 0.7em 4em;
 	background: #596D48;
 	color: white;
 	font-size: 0.90em;
