--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ p {
 	font-size: 0.9em;
 }
 
-p a {
+p a[href="#"] {
 	color: #596D48;
 	font-weight: 600;
 	text-decoration: none;
@@ -160,16 +160,16 @@ p a {
 	}
 	
 	input {
-		width: 70%;
+		width: 75%;
 	}
 	
 	form {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr)
+		grid-template-columns: repeat(2, 1fr);
 	}
 	
 	.content h3 {
-		grid-column: span 2;
+		grid-column: 1/3;
 	}
 	
 	.logo-shader {
